--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,14 @@ ModularityPoster.aux
 ModularityPoster.log
 ModularityPoster.synctex.gz
 texput.log
+ModularityPoster.ps
+sigproc.log
+Modularity.graffle/data.plist
+Modularity.graffle/image1.png
+Modularity.graffle/image2.png
+Modularity.graffle/image3.png
+Modularity.graffle/image4.png
+Modularity.graffle/image6.tiff
+ModularityPoster.bbl
+ModularityPoster.blg
+ModularityPoster.dvi
