Update format from acm format to sigplanconf

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,14 @@
 ModularityPoster.pdf
-ModularityPoster.aux
-ModularityPoster.log
-ModularityPoster.synctex.gz
-texput.log
-ModularityPoster.ps
-sigproc.log
+*.aux
+*.log
+*.gz
+*.ps
 Modularity.graffle/data.plist
 Modularity.graffle/image1.png
 Modularity.graffle/image2.png
 Modularity.graffle/image3.png
 Modularity.graffle/image4.png
 Modularity.graffle/image6.tiff
-ModularityPoster.bbl
-ModularityPoster.blg
-ModularityPoster.dvi
+*.bbl
+*.blg
+*.dvi
